Frankbelford/uatv1ba/force-app/main/default/objects/Vend_History__c/Vend_History__c.object-meta.xml
<CustomObject>
    <label>Vend History</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Vend History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vend Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>