Frankbelford/uatv1ba/force-app/main/default/objects/Vend_History__c/fields/Supplier_Account__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vend Histories</relationshipLabel>
    <relationshipName>Vend_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>