Frankbelford/uatv1ba/force-app/main/default/objects/Vend_History__c/fields/Supplier_Tier__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Tier__c</fullName>
    <label>Supplier Tier</label>
    <type>TextArea</type>
</CustomField>