Frankbelford/uatv1ba/force-app/main/default/objects/Vend_History__c/fields/Vended_By__c.field-meta.xml
<CustomField>
    <fullName>Vended_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>User how vended the job order</inlineHelpText>
    <label>Vended By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Vend_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>