Frankbelford/uatv1ba/force-app/main/default/objects/Vend_History__c/fields/Vended_to_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Vended_to_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vended to Supplier</label>
    <referenceTo>Suppliers__c</referenceTo>
    <relationshipLabel>Vend Histories</relationshipLabel>
    <relationshipName>Vend_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>