Frankbelford/uatv1ba/force-app/main/default/objects/Vend_History__c/fields/Vended_to_Tier__c.field-meta.xml
<CustomField>
    <fullName>Vended_to_Tier__c</fullName>
    <label>Vended to Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>